buildsystem: Cleanup libraries dependencies

--- a/src/apps/stylededit/CMakeLists.txt
+++ b/src/apps/stylededit/CMakeLists.txt
@@ -10,8 +10,7 @@ Application(
 	StyledEditView.cpp
 	StyledEditWindow.cpp
 
-	LIBS
-	tracker
+	LIBS tracker libshared
 )
 
 UsePrivateHeaders( StyledEdit textencoding )
