--- a/src/apps/terminal/CMakeLists.txt
+++ b/src/apps/terminal/CMakeLists.txt
@@ -35,9 +35,7 @@ Application(
 	VTKeyTbl.c
 	VTPrsTbl.c
 
-	LIBS
-	tracker
-	pthread
+	LIBS tracker pthread libshared
 )
 
 UsePrivateHeaders(Terminal textencoding kernel)
