--- a/src/servers/input/CMakeLists.txt
+++ b/src/servers/input/CMakeLists.txt
@@ -25,6 +25,7 @@ Server(
 
 	INCLUDES
 	"../../../headers/os/add-ons/input_server/"
+	LIBS libshared
 )
 
 UsePrivateHeaders(input_server app interface support)
