--- a/src/kits/tracker/CMakeLists.txt
+++ b/src/kits/tracker/CMakeLists.txt
@@ -87,10 +87,7 @@ AddOn(
 	"../../../headers/os/add-ons/input_server/"
 	"../../add-ons/input_server/filters/shortcut_catcher/"
 
-	LIBS
-	be
-	localestub
-	root
+	LIBS be localestub root libshared
 )
 
 UsePrivateHeaders(tracker interface shared tracker mount storage support)
