Add Translation Kit commandline tools

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -23,5 +23,6 @@ Application(rmindex SOURCES rmindex.cpp)
 Application(setmime SOURCES setmime.cpp)
 Application(shutdown SOURCES shutdown.cpp)
 Application(system_time SOURCES system_time.cpp)
+Application(translate SOURCES translate.cpp LIBS translation)
 Application(watch SOURCES watch.c LIBS ncurses)
 Application(xres SOURCES xres.cpp)
