UnitTests: Add storage kit tests to build

--- a/src/tests/kits/CMakeLists.txt
+++ b/src/tests/kits/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(app)
 add_subdirectory(interface)
 #add_subdirectory(net)
-#add_subdirectory(storage)
+add_subdirectory(storage)
 add_subdirectory(support)
