--- a/src/tests/kits/storage/testapps/CMakeLists.txt
+++ b/src/tests/kits/storage/testapps/CMakeLists.txt
@@ -1,2 +1,2 @@
-Test ( PathMonitorTest SOURCES PathMonitorTest.cpp)
-Test ( PathMonitorTest2 SOURCES PathMonitorTest2.cpp)
+#Test ( PathMonitorTest SOURCES PathMonitorTest.cpp)
+#Test ( PathMonitorTest2 SOURCES PathMonitorTest2.cpp)
