Add translators addons in the buildsystem

--- a/src/add-ons/translators/bmp/CMakeLists.txt
+++ b/src/add-ons/translators/bmp/CMakeLists.txt
@@ -1,11 +1,11 @@
 
 Application(
-	HVIFTranslator
+	BMPTranslator
 
 	SOURCES
-	HVIFMain.cpp	
-	HVIFTranslator.cpp
-	HVIFView.cpp
+	BMPMain.cpp
+	BMPTranslator.cpp
+	BMPView.cpp
 
 	LIBS be translation translatorutils
 
