--- a/src/add-ons/translators/exr/CMakeLists.txt
+++ b/src/add-ons/translators/exr/CMakeLists.txt
@@ -9,9 +9,9 @@ Application(
 	IStreamWrapper.cpp
 	main.cpp
 
-	LIBS be translation translatorutils
+	LIBS be translation translatorutils IlmImf Half
 
 	INCLUDES
 	"../shared"
-	include_directories("/usr/include/OpenEXR/")
+	"/usr/include/OpenEXR/"
 )
