--- a/src/add-ons/translators/ico/CMakeLists.txt
+++ b/src/add-ons/translators/ico/CMakeLists.txt
@@ -1,11 +1,12 @@
 
 Application(
-	HVIFTranslator
+	ICOTranslator
 
 	SOURCES
-	HVIFMain.cpp	
-	HVIFTranslator.cpp
-	HVIFView.cpp
+	ConfigView.cpp
+	ICO.cpp
+	ICOTranslator.cpp
+	main.cpp
 
 	LIBS be translation translatorutils
 
