Add Headers and Libraries variabiles for Translators in deps.cmake

--- a/src/add-ons/translators/exr/CMakeLists.txt
+++ b/src/add-ons/translators/exr/CMakeLists.txt
@@ -9,9 +9,10 @@ Application(
 	IStreamWrapper.cpp
 	main.cpp
 
-	LIBS be translation translatorutils IlmImf Half
+	LIBS be translation translatorutils ${EXR_LIBRARIES}
+
 
 	INCLUDES
 	"../shared"
-	"/usr/include/OpenEXR/"
+${EXR_INCLUDES}
 )
