--- a/src/add-ons/translators/icns/CMakeLists.txt
+++ b/src/add-ons/translators/icns/CMakeLists.txt
@@ -8,7 +8,7 @@ Application(
 	ICNSTranslator.cpp
 	main.cpp
 
-	LIBS be translation translatorutils icns
+	LIBS be translation translatorutils ${ICNS_LIBRARIES}
 
 	INCLUDES
 	"../shared"
