--- a/src/add-ons/translators/tiff/CMakeLists.txt
+++ b/src/add-ons/translators/tiff/CMakeLists.txt
@@ -7,7 +7,7 @@ Application(
 	TIFFTranslator.cpp
 	TIFFView.cpp
 
-	LIBS be translation translatorutils tiff
+	LIBS be translation translatorutils ${TIFF_LIBRARIES}
 
 	INCLUDES
 	"../shared"
