--- a/src/add-ons/translators/webp/CMakeLists.txt
+++ b/src/add-ons/translators/webp/CMakeLists.txt
@@ -6,7 +6,7 @@ Application(
 	main.cpp
 	WebPTranslator.cpp
 
-	LIBS be translation translatorutils webp
+	LIBS be translation translatorutils ${WEBP_LIBRARIES}
 
 	INCLUDES
 	"../shared"
