Add appserver variabile in deps.cmake and add all Translators in build profile

--- a/src/servers/app/CMakeLists.txt
+++ b/src/servers/app/CMakeLists.txt
@@ -114,7 +114,7 @@ Server(
 	stackandtile/Stacking.cpp
 	stackandtile/Tiling.cpp
 
-	LIBS be root localestub freetype agg icon linprog input libshared udev
+	LIBS be root localestub agg icon linprog libshared ${APPSERVER_LIBRARIES}
 
 	INCLUDES
 	"./drawing"
