--- a/src/kits/CMakeLists.txt
+++ b/src/kits/CMakeLists.txt
@@ -2,7 +2,7 @@ AddOn(
 	be
 	SHARED
 
-	LIBS root icon agg ${ZLIB_LIBRARIES} pthread localestub libshared
+	LIBS root icon agg ${ZLIB_LIBRARIES} pthread localestub shared
 )
 
 UsePrivateHeaders(be app interface kernel print shared locale)
