Introduce new Area implementation
* Using posix shared memory
* Make way for future permission semantics
* Much faster

--- a/src/system/kernel_linux/CMakeLists.txt
+++ b/src/system/kernel_linux/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(messaging)
 target_sources(root PRIVATE
 	main.cpp
 
-	area.c
+	Area.cpp
 	byteorder.cpp
 	debug.c
 	framebuffer.cpp
