Move textencoding to separate library.
* Fixes #54.

--- a/src/add-ons/translators/bmp/CMakeLists.txt
+++ b/src/add-ons/translators/bmp/CMakeLists.txt
@@ -7,7 +7,7 @@ Application(
 	BMPTranslator.cpp
 	BMPView.cpp
 
-	LIBS be translation translatorutils
+	LIBS be translation translatorutils localestub
 
 	INCLUDES
 	"../shared"
