--- a/src/add-ons/translators/ico/CMakeLists.txt
+++ b/src/add-ons/translators/ico/CMakeLists.txt
@@ -8,7 +8,7 @@ Application(
 	ICOTranslator.cpp
 	main.cpp
 
-	LIBS be translation translatorutils
+	LIBS be translation translatorutils localestub
 
 	INCLUDES
 	"../shared"
