--- a/src/add-ons/translators/pcx/CMakeLists.txt
+++ b/src/add-ons/translators/pcx/CMakeLists.txt
@@ -6,7 +6,7 @@ Application(
 	ConfigView.cpp
 	PCXTranslator.cpp
 
-	LIBS be translation translatorutils
+	LIBS be translation translatorutils localestub
 
 	INCLUDES
 	"../shared"
