--- a/src/add-ons/translators/png/CMakeLists.txt
+++ b/src/add-ons/translators/png/CMakeLists.txt
@@ -7,7 +7,7 @@ Application(
 	PNGTranslator.cpp
 	PNGView.cpp
 
-	LIBS be translation translatorutils ${PNG_LIBRARIES}
+	LIBS be translation translatorutils localestub ${PNG_LIBRARIES}
 
 	INCLUDES
 	"../shared"
