--- a/src/add-ons/translators/psd/CMakeLists.txt
+++ b/src/add-ons/translators/psd/CMakeLists.txt
@@ -10,7 +10,7 @@ Application(
 	PSDTranslatorApp.cpp
 	PSDWriter.cpp
 
-	LIBS be translation translatorutils
+	LIBS be translation translatorutils localestub
 
 	INCLUDES
 	"../shared"
