--- a/src/add-ons/translators/sgi/CMakeLists.txt
+++ b/src/add-ons/translators/sgi/CMakeLists.txt
@@ -7,7 +7,7 @@ Application(
 	SGITranslator.cpp
 	SGIView.cpp
 
-	LIBS be translation translatorutils
+	LIBS be translation translatorutils localestub
 
 	INCLUDES
 	"../shared"
