--- a/src/add-ons/translators/tga/CMakeLists.txt
+++ b/src/add-ons/translators/tga/CMakeLists.txt
@@ -6,7 +6,7 @@ Application(
 	TGATranslator.cpp
 	TGAView.cpp
 
-	LIBS be translation translatorutils
+	LIBS be translation translatorutils localestub
 
 	INCLUDES
 	"../shared"
