--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/icu-cmake"]
 	path = external/icu-cmake
 	url = https://github.com/Barrett17/icu-cmake/
+[submodule "external/backward-cpp"]
+	path = external/backward-cpp
+	url = https://github.com/bombela/backward-cpp.git
