Use private headers for libroot, print, system, tracker

--- a/src/apps/stylededit/CMakeLists.txt
+++ b/src/apps/stylededit/CMakeLists.txt
@@ -13,4 +13,4 @@ Application(
 	LIBS tracker shared translation translatorutils textencoding
 )
 
-UsePrivateHeaders( StyledEdit textencoding )
+UsePrivateHeaders(StyledEdit textencoding tracker)
