--- a/src/servers/registrar/CMakeLists.txt
+++ b/src/servers/registrar/CMakeLists.txt
@@ -42,4 +42,4 @@ Server(
 	LIBS localestub
 )
 
-UsePrivateHeaders(registrar app kernel)
+UsePrivateHeaders(registrar app kernel libroot system tracker)
