Add a multiprocess port test
* Other minor things.

--- a/src/tests/kits/app/messaging/CMakeLists.txt
+++ b/src/tests/kits/app/messaging/CMakeLists.txt
@@ -1,3 +1,5 @@
 
 Test(HandlerLooperMessageTest SOURCES HandlerLooperMessageTest.cpp)
 Test(PortLinkTest SOURCES PortLinkTest.cpp)
+
+UsePrivateHeaders(PortLinkTest app)
