Initial input_server work

--- a/src/add-ons/input_server/devices/keyboard/CMakeLists.txt
+++ b/src/add-ons/input_server/devices/keyboard/CMakeLists.txt
@@ -10,6 +10,7 @@ AddOn(
 
 	INCLUDES
 	"./"
+	LIBS input_server be shared localestub
 )
 
 UsePrivateHeaders(keyboard input interface system tracker)
