--- a/src/add-ons/input_server/devices/mouse/CMakeLists.txt
+++ b/src/add-ons/input_server/devices/mouse/CMakeLists.txt
@@ -2,6 +2,9 @@ AddOn(
 	mouse
 	SHARED
 
+	LIBS
+	${FREETYPE_LIBRARIES} ${INPUT_LIBRARIES} ${UDEV_LIBRARIES} ${DRM_LIBRARIES}
+
 	SOURCES
 	MouseInputDevice.cpp
 
