Declare ICU dep. Other cleanup.

--- a/src/add-ons/translators/CMakeLists.txt
+++ b/src/add-ons/translators/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(shared)
 #add_subdirectory(bmp)
 #add_subdirectory(exr)
 #add_subdirectory(gif)
-#add_subdirectory(hvif)
+add_subdirectory(hvif)
 #add_subdirectory(icns)
 #add_subdirectory(ico)
 #add_subdirectory(jpeg)
