--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/backward-cpp"]
 	path = external/backward-cpp
 	url = https://github.com/bombela/backward-cpp.git
+[submodule "src/system/kernel/nexus"]
+	path = src/system/kernel/nexus
+	url = https://github.com/Numerio/Nexus.git
