Update scripts and buildsystem for nexus dkms

--- a/data/systemd/input_server.service
+++ b/data/systemd/input_server.service
@@ -7,7 +7,7 @@ After=app_server.service
 ExecStartPre=/bin/sleep 0.5
 ExecStart=/system/servers/input_server
 StandardInput=tty-force
-StandardOutput=inherit
+StandardOutput=journal+console
 StandardError=inherit
 Restart=always
 RestartSec=500ms
