--- a/data/systemd/deskbar.service
+++ b/data/systemd/deskbar.service
@@ -7,7 +7,7 @@ After=input_server.service
 ExecStartPre=/bin/sleep 0.5
 ExecStart=/system/servers/Deskbar
 StandardInput=tty-force
-StandardOutput=inherit
+StandardOutput=journal+console
 StandardError=inherit
 Restart=always
 RestartSec=500ms
